[gd_scene load_steps=35 format=3 uid="uid://8qk7rjw44lkv"]

[ext_resource type="Texture2D" uid="uid://bfxo8djr5ybh6" path="res://texture/A_white_cube.png" id="1_ea8ph"]
[ext_resource type="Script" path="res://scripts/level_4.gd" id="1_pwekq"]
[ext_resource type="PackedScene" uid="uid://iog44ou6rn43" path="res://Others/player.tscn" id="2_8ag56"]
[ext_resource type="Texture2D" uid="uid://bt8q38iegkdb1" path="res://texture/pixil-frame-0.png" id="3_fdwmu"]
[ext_resource type="Texture2D" uid="uid://bhxpwi45a4ao8" path="res://texture/flag.png" id="4_sb60j"]
[ext_resource type="Script" path="res://scripts/coins_counter.gd" id="5_xkomw"]
[ext_resource type="Texture2D" uid="uid://c4qdotc4b4kh1" path="res://texture/pissmanframe1.png" id="6_c0rev"]
[ext_resource type="Shader" path="res://Others/BlurGB.gdshader" id="7_rleu3"]
[ext_resource type="Material" uid="uid://p5ibbvxbqjpd" path="res://texture/blurshader.tres" id="8_fkwk1"]
[ext_resource type="Theme" uid="uid://khgpj6ruioa0" path="res://texture/Bold_text.tres" id="9_n8ie3"]
[ext_resource type="Theme" uid="uid://flijevvthfaj" path="res://texture/text.tres" id="10_lof40"]
[ext_resource type="FontFile" uid="uid://cnjcheyut2dew" path="res://texture/fonts/Handjet-SemiBold.ttf" id="11_c8wew"]
[ext_resource type="Texture2D" uid="uid://bo7d3b7hpqtin" path="res://texture/just_a_cube.png" id="12_pgh4l"]
[ext_resource type="Texture2D" uid="uid://bstdhsw1te717" path="res://texture/coin.png" id="13_ma4xq"]
[ext_resource type="Texture2D" uid="uid://cg2npjwg7we2c" path="res://texture/The_Missing_textures.webp" id="15_bf055"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ggy0"]
size = Vector2(657, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c40m1"]
size = Vector2(78, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1q1x"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akvjd"]
size = Vector2(46, 47)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ax8ve"]
shader = ExtResource("7_rleu3")
shader_parameter/blur_amount = 3.191
shader_parameter/mix_amount = 0.079
shader_parameter/color_over = null

[sub_resource type="LabelSettings" id="LabelSettings_xkk6r"]
font = ExtResource("11_c8wew")
font_size = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ceq2q"]
shader = ExtResource("7_rleu3")
shader_parameter/blur_amount = 3.014
shader_parameter/mix_amount = 0.642
shader_parameter/color_over = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ilnsw"]
shader = ExtResource("7_rleu3")
shader_parameter/blur_amount = 2.739
shader_parameter/mix_amount = 0.774
shader_parameter/color_over = Color(0.523532, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7khbq"]
font = ExtResource("11_c8wew")
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_655jf"]
size = Vector2(3682, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cne20"]

[sub_resource type="Animation" id="Animation_4o8c2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("null_1/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(63, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("null_1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yxp2w"]
resource_name = "null jumps"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("null_1/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, 0), Vector2(63, -23), Vector2(102, 14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("null_1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.46667, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1bmw"]
_data = {
"RESET": SubResource("Animation_4o8c2"),
"null jumps": SubResource("Animation_yxp2w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wflr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spts4"]
size = Vector2(416.25, 15.6875)

[sub_resource type="Animation" id="Animation_tny12"]
resource_name = "Dialog1"
length = 0.53
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textbox/Panel/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-2.23517e-08, 0.0333333, 0.0666666, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["W", "Wha", "What", "What t", "What th", "What the", "What the f", "What the fl", "What the fli", "What the flip", "What the flip i", "What the flip is", "What the flip is t", "What the flip is th", "What the flip is tha", "What the flip is that?"]
}

[sub_resource type="Animation" id="Animation_wn6f8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textbox/Panel/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Wtf is that?"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qluo"]
_data = {
"Dialog1": SubResource("Animation_tny12"),
"RESET": SubResource("Animation_wn6f8")
}

[node name="Level4" type="Node2D"]
script = ExtResource("1_pwekq")

[node name="sky thing" type="TextureRect" parent="."]
modulate = Color(0, 0.75, 1, 1)
z_index = -10
offset_left = -1130.0
offset_top = -1136.0
offset_right = 2620.0
offset_bottom = 1123.0
texture = ExtResource("1_ea8ph")

[node name="player2d" parent="." instance=ExtResource("2_8ag56")]
position = Vector2(1, 24)

[node name="grass" type="Node2D" parent="."]

[node name="grass platform" type="StaticBody2D" parent="grass"]
position = Vector2(-284, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform"]
position = Vector2(285.5, 128.5)
shape = SubResource("RectangleShape2D_0ggy0")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 616.0
offset_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="grass/grass platform/TextureRect"]
z_index = -1
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_top = 85.0
offset_right = 660.0
offset_bottom = 183.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform2" type="StaticBody2D" parent="grass"]
position = Vector2(294, -62)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform2"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform2"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform3" type="StaticBody2D" parent="grass"]
position = Vector2(66, -190)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform3"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform3"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform4" type="StaticBody2D" parent="grass"]
position = Vector2(155, -127)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform4"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform4"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform5" type="StaticBody2D" parent="grass"]
position = Vector2(-16, -191)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform5"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform5"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform10" type="StaticBody2D" parent="grass"]
position = Vector2(395, -311)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform10"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform10"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform17" type="StaticBody2D" parent="grass"]
position = Vector2(531, -364)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform17"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform17"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform18" type="StaticBody2D" parent="grass"]
position = Vector2(612, -363)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform18"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform18"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform11" type="StaticBody2D" parent="grass"]
position = Vector2(33, -317)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform11"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform11"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform12" type="StaticBody2D" parent="grass"]
position = Vector2(-58, -366)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform12"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform12"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform13" type="StaticBody2D" parent="grass"]
position = Vector2(-176, -377)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform13"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform13"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform14" type="StaticBody2D" parent="grass"]
position = Vector2(-320, -410)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform14"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform14"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform16" type="StaticBody2D" parent="grass"]
position = Vector2(-458, -426)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform16"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform16"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform15" type="StaticBody2D" parent="grass"]
position = Vector2(-600, -464)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform15"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform15"]
texture_filter = 1
texture_repeat = 2
offset_left = -43.0
offset_top = 37.0
offset_right = 39.0
offset_bottom = 114.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform6" type="StaticBody2D" parent="grass"]
position = Vector2(-147, -134)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform6"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform6"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform7" type="StaticBody2D" parent="grass"]
position = Vector2(329, -193)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform7"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform7"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform8" type="StaticBody2D" parent="grass"]
position = Vector2(202, -257)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform8"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform8"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="grass platform9" type="StaticBody2D" parent="grass"]
position = Vector2(-285, -65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform9"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_c40m1")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform9"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fdwmu")
expand_mode = 1
stretch_mode = 1

[node name="ending" type="StaticBody2D" parent="."]
position = Vector2(747, -293)

[node name="TextureRect" type="TextureRect" parent="ending"]
texture_filter = 1
texture_repeat = 2
offset_left = -22.0
offset_top = -19.0
offset_right = 18.0
offset_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_sb60j")
expand_mode = 1
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ending"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_n1q1x")

[node name="Area2D" type="Area2D" parent="ending"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ending/Area2D"]
position = Vector2(-2, 1.5)
shape = SubResource("RectangleShape2D_akvjd")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
offset = Vector2(0, -50)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="textbox" type="CanvasLayer" parent="."]

[node name="coins_collector" type="Label" parent="textbox"]
offset_right = 60.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Coins = "
script = ExtResource("5_xkomw")

[node name="Panel" type="Panel" parent="textbox"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 24.0
offset_right = 174.0
offset_bottom = 134.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="textbox/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 266.0
offset_top = -67.0
offset_right = 447.0
offset_bottom = 99.0
texture = ExtResource("6_c0rev")

[node name="Label" type="Label" parent="textbox/Panel"]
layout_mode = 0
offset_left = 67.0
offset_top = 9.0
offset_right = 192.0
offset_bottom = 32.0
text = "Wtf is that?"

[node name="level_done" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="textbox/level_done"]
material = SubResource("ShaderMaterial_ax8ve")
layout_mode = 0
offset_left = -663.0
offset_top = -389.0
offset_right = 792.0
offset_bottom = 417.0

[node name="ColorRect" type="ColorRect" parent="textbox/level_done"]
material = ExtResource("8_fkwk1")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -73.0
offset_right = 118.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_n8ie3")

[node name="Label" type="Label" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_n8ie3")
text = "Level Done!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 54.0
offset_right = 43.0
offset_bottom = 85.0
theme = ExtResource("10_lof40")
text = "Next"

[node name="pause_menu" type="Control" parent="textbox"]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -32.0
offset_right = 52.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="textbox/pause_menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.318
anchor_right = 0.5
anchor_bottom = -1.318
offset_left = -77.0
offset_top = -31.648
offset_right = 77.0
offset_bottom = 14.352
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_xkk6r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="textbox/pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="textbox/pause_menu/MarginContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("10_lof40")
text = "Main Menu"

[node name="resume" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("10_lof40")
text = "CONTINE"

[node name="bg" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = ExtResource("8_fkwk1")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -671.5
offset_top = -378.0
offset_right = 671.5
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("12_pgh4l")

[node name="bg2" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = SubResource("ShaderMaterial_ceq2q")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -405.0
offset_right = 97.5
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("12_pgh4l")

[node name="death_screen" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="textbox/death_screen"]
material = SubResource("ShaderMaterial_ilnsw")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -624.5
offset_top = -360.5
offset_right = 624.5
offset_bottom = 360.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ea8ph")

[node name="BoxContainer" type="BoxContainer" parent="textbox/death_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -42.5
offset_right = 103.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Label" type="Label" parent="textbox/death_screen/BoxContainer"]
texture_filter = 1
layout_mode = 2
text = "You Might have Died!"
label_settings = SubResource("LabelSettings_7khbq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Player = NULL 
Player does not exist"
horizontal_alignment = 1

[node name="respawn_button" type="Button" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Respawn"

[node name="death_trigger" type="Area2D" parent="."]
position = Vector2(468, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_trigger"]
position = Vector2(139, -10)
shape = SubResource("RectangleShape2D_655jf")

[node name="coin1" type="Area2D" parent="."]
position = Vector2(-603, -459)

[node name="Sprite2D" type="Sprite2D" parent="coin1"]
texture_filter = 1
texture = ExtResource("13_ma4xq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin1"]
shape = SubResource("RectangleShape2D_cne20")

[node name="null_1" type="Node2D" parent="."]
position = Vector2(636, -342)

[node name="Sprite2D" type="Sprite2D" parent="null_1"]
position = Vector2(63, -23)
scale = Vector2(0.03, 0.03)
texture = ExtResource("15_bf055")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v1bmw")
}

[node name="cutstuff_trigger" type="Area2D" parent="."]
position = Vector2(416, -302)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cutstuff_trigger"]
shape = SubResource("RectangleShape2D_3wflr")

[node name="player_stoper" type="StaticBody2D" parent="."]
position = Vector2(383, -310)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_stoper"]
position = Vector2(241, -225)
rotation = 1.5708
shape = SubResource("RectangleShape2D_spts4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="player_stoper"]
position = Vector2(-21.8438, -172)
rotation = 1.5708
shape = SubResource("RectangleShape2D_spts4")
one_way_collision = true

[node name="Dialog" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8qluo")
}
speed_scale = 0.5

[connection signal="body_shape_entered" from="ending/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="pressed" from="textbox/level_done/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="textbox/pause_menu/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="textbox/pause_menu/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="textbox/death_screen/BoxContainer/respawn_button" to="." method="_on_respawn_button_pressed"]
[connection signal="body_shape_entered" from="death_trigger" to="." method="_on_death_trigger_body_shape_entered"]
[connection signal="body_shape_entered" from="coin1" to="textbox/coins_collector" method="_on_coin_1_body_shape_entered"]
[connection signal="body_shape_entered" from="cutstuff_trigger" to="." method="_on_cutstuff_trigger_body_shape_entered"]
